--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="header">
       <nav class="navbar py-1 navbar-expand-md navbar-dark bg-danger">
         <div class="container">
-          <a class="navbar-brand" href="#">AVK</a>
+          <a class="navbar-brand" href="#">AVK1</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -77,10 +77,9 @@
     <section id="hakkimizda">
       <div class="container">
         <div class="row row-cols-2" style="min-height: 300px;">
-          <div class="col" style="background-color: blue;"></div>
+          <div class="col" style="background-color: rgb(255, 251, 0);"></div>
           <div class="col" style="background-color: red;"></div>
-          <div class="col" style="background-color: yellow;"></div>
-          <div class="col" style="background-color: black;"></div>
+
 
         </div>
       </div>
